# dsg-2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/levels/: 1.txt  2.txt  3.txt  4.txt  example.txt
resources/textures/: arrow.aseprite  goal-planet.aseprite  player.aseprite
src/: CMakeLists.txt  consts.h  cursor.cpp  cursor.h  game.cpp  game.h  main.cpp  obj.cpp  obj.h  phys.cpp  phys.h  physmanager.cpp  physmanager.h
